; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_stream_buf_reset.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_socket.c_stream_buf_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stream_buf = type { i32, i32, i32, i32, i32 }

@D_STREAM_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [14 x i8] c"STREAM: RESET\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stream_buf*)* @stream_buf_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stream_buf_reset(%struct.stream_buf* %0) #0 {
  %2 = alloca %struct.stream_buf*, align 8
  store %struct.stream_buf* %0, %struct.stream_buf** %2, align 8
  %3 = load i32, i32* @D_STREAM_DEBUG, align 4
  %4 = call i32 @dmsg(i32 %3, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  %5 = load %struct.stream_buf*, %struct.stream_buf** %2, align 8
  %6 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %5, i32 0, i32 0
  store i32 0, i32* %6, align 4
  %7 = load %struct.stream_buf*, %struct.stream_buf** %2, align 8
  %8 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.stream_buf*, %struct.stream_buf** %2, align 8
  %11 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %10, i32 0, i32 4
  store i32 %9, i32* %11, align 4
  %12 = load %struct.stream_buf*, %struct.stream_buf** %2, align 8
  %13 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %12, i32 0, i32 2
  %14 = call i32 @buf_reset(i32* %13)
  %15 = load %struct.stream_buf*, %struct.stream_buf** %2, align 8
  %16 = getelementptr inbounds %struct.stream_buf, %struct.stream_buf* %15, i32 0, i32 1
  store i32 -1, i32* %16, align 4
  ret void
}

declare dso_local i32 @dmsg(i32, i8*) #1

declare dso_local i32 @buf_reset(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
